--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 /First/.vs/First
 /Xml/Xml/.vs
 /First/First
+/FirstApp/FirstApp/bin/Debug/netcoreapp2.2
+/FirstApp/FirstApp/obj
+/FirstApp/.vs/FirstApp
