--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /FirstApp/FirstApp/bin/Debug/netcoreapp2.2
 /FirstApp/FirstApp/obj
 /FirstApp/.vs/FirstApp
+/FirstApp/FirstApp/.vs/VSWorkspaceState.json
+/FirstApp/FirstApp/FirstApp.csproj.user
