--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@
 /FirstApp/.vs/FirstApp
 /FirstApp/FirstApp/.vs/VSWorkspaceState.json
 /FirstApp/FirstApp/FirstApp.csproj.user
+/Trening/.vscode
+/Trening/obj
+/Trening/bin/Debug/netcoreapp2.2
