--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@
 /Trening/.vscode
 /Trening/obj
 /Trening/bin/Debug/netcoreapp2.2
+/TelegramBot/.vs/TelegramBot
+/TelegramBot/TelegramBot/bin/Debug/netcoreapp2.2
+/TelegramBot/TelegramBot/obj/Debug/netcoreapp2.2
+/TelegramBot/TelegramBot/obj
