--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,12 @@
 /TelegramBot/TelegramBot/bin/Debug/netcoreapp2.2
 /TelegramBot/TelegramBot/obj/Debug/netcoreapp2.2
 /TelegramBot/TelegramBot/obj
+/kollektion/ConsoleApp2/bin/Debug/netcoreapp2.2
+/kollektion/ConsoleApp2/obj
+/Strings/Strings/bin/Debug/netcoreapp2.2
+/Strings/Strings/obj
+/Stwich/.vs
+/Strings/.vs/Strings/v16
+/kollektion/.vs/ConsoleApp2
+/File/File/.vs
+/File/File/obj/Release/netcoreapp2.2
