--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@
 /kollektion/.vs/ConsoleApp2
 /File/File/.vs
 /File/File/obj/Release/netcoreapp2.2
+/ConsoleApp2/ConsoleApp2/bin/Debug/netcoreapp2.2
+/ConsoleApp2/ConsoleApp2/obj
+/ConsoleApp2/.vs/ConsoleApp2/v16/Server/sqlite3
+/ConsoleApp2/.vs/ConsoleApp2/v16
