--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,14 @@
 /ConsoleApp2/ConsoleApp2/obj
 /ConsoleApp2/.vs/ConsoleApp2/v16/Server/sqlite3
 /ConsoleApp2/.vs/ConsoleApp2/v16
+/ConsoleApp3/.vs/ConsoleApp3/v16/Server/sqlite3
+/ConsoleApp3/ConsoleApp3/bin/Debug/netcoreapp2.2
+/ConsoleApp3/ConsoleApp3/obj
+/ConsoleApp3/.vs/ConsoleApp3
+/Opencv/.vs/Opencv/v16
+/Opencv/Opencv/bin/Debug/netcoreapp2.2
+/Opencv/Opencv/obj/Debug/netcoreapp2.2
+/Opencv/Opencv/obj
+/primer/.vs/primer
+/primer/primer/bin/Debug/netcoreapp2.2
+/primer/primer/obj
