--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@
 /primer/primer/bin/Debug/netcoreapp2.2
 /primer/primer/obj
 /LINQS/.vs/LINQS/v16/Server/sqlite3
+/PLinq/PLinq/obj
+/PLinq/PLinq/bin/Debug/netcoreapp2.2
+/PLinq/.vs/PLinq/v16
