--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,8 @@
 /PLinq/PLinq/obj
 /PLinq/PLinq/bin/Debug/netcoreapp2.2
 /PLinq/.vs/PLinq/v16
+/Sborka musorov
+/referensiyal/referensiyal/bin/Debug/netcoreapp2.2
+/referensiyal/referensiyal/obj
+/referensiyal/.vs/referensiyal
+/PLinq/.vs/PLinq/DesignTimeBuild
