--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@
 /referensiyal/referensiyal/obj
 /referensiyal/.vs/referensiyal
 /PLinq/.vs/PLinq/DesignTimeBuild
+/WorkFile/WorkFile/bin/Debug/netcoreapp2.2
+/WorkFile/WorkFile/obj
+/WorkFile/.vs/WorkFile/v16/Server/sqlite3
+/WorkFile/.vs/WorkFile/v16
