--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,9 @@
 /WorkFile/WorkFile/obj
 /WorkFile/.vs/WorkFile/v16/Server/sqlite3
 /WorkFile/.vs/WorkFile/v16
+/WebApiApp/.vs/WebApiApp/v16
+/WebApiApp/WebApiApp/obj
+/WebApiApp/WebApiApp/Properties
+/WebApiApp/WebApiApp/appsettings.Development.json
+/WebApiApp/WebApiApp/appsettings.json
+/WorkFile/.vs/WorkFile/DesignTimeBuild
