--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,28 @@
 /WebApiApp/WebApiApp/appsettings.Development.json
 /WebApiApp/WebApiApp/appsettings.json
 /WorkFile/.vs/WorkFile/DesignTimeBuild
+/delegate/delegate/bin/Debug/netcoreapp2.2
+/delegate/delegate/obj
+/delegate/.vs/delegate
+/dlinoy arifmetika/.vs/aasd
+/dlinoy arifmetika/aasd/bin/Debug/netcoreapp2.2
+/dlinoy arifmetika/aasd/obj
+/Postgres/Postgres/bin/Debug/netcoreapp2.2
+/Postgres/Postgres/obj/Debug/netcoreapp2.2
+/Postgres/Postgres/obj
+/Threads/Threads/obj
+/Threads/Threads/bin/Debug/netcoreapp2.2
+/Threads/.vs/Threads
+/Webhost/Webhost/Properties
+/Webhost/Webhost/obj/Debug/netcoreapp2.2
+/Webhost/Webhost/obj/project.assets.json
+/Webhost/Webhost/obj/Webhost.csproj.nuget.cache
+/Webhost/Webhost/obj/Webhost.csproj.nuget.dgspec.json
+/Webhost/Webhost/obj
+/Webhost/Webhost/bin/Debug/netcoreapp2.2
+/Webhost/Webhost/appsettings.Development.json
+/Webhost/Webhost/appsettings.json
+/Webhost/Webhost/index.html
+/Webhost/.vs/Webhost/config
+/Webhost/.vs/Webhost/DesignTimeBuild
+/Webhost/.vs/Webhost/v16
