--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,10 @@
 /Webhost/.vs/Webhost/config
 /Webhost/.vs/Webhost/DesignTimeBuild
 /Webhost/.vs/Webhost/v16
+/Allproekt/Allproekt/bin/Debug/netcoreapp2.2
+/Allproekt/Allproekt/obj
+/Chernavik/.vs/Chernavik/v16
+/Chernavik/Chernavik/obj/Debug/netcoreapp2.2
+/Chernavik/Chernavik/obj
+/newproject
+/Allproekt/.vs/Allproekt
